# P1

./: .gitignore  Cargo.toml  compile  link  main.cpp  run
P1/components/: Component.cpp  Component.h  GarbageCollector.cpp  GarbageCollector.h  LineRendererComponent.h  RendererComponent.h  Transform.h  Viewport.h
P1/concepts/: GameConcepts.h  MathConcepts.h
P1/engine/: Engine.cpp  Engine.h
P1/entity/: Entity.cpp  Entity.h  EntitySelector.h
P1/events/: EventManager.h  Logger.cpp  Logger.h  TerminalStyle.h
P1/graphics/: Color.h  Line.h  Material.h  Window.cpp  Window.h
P1/inputs/: Axis.cpp  Axis.h  Axis2.cpp  Axis2.h  InputManager.cpp  InputManager.h
P1/main/: GameObject.h
P1/math/: Concepts.h  Matrix.h  Rect.h  Vector2.h  Vector3.h
P1/miscellaneous/: Proxy.h  coroutine.h
P1/systems/: LineRenderer.h  MainManager.cpp  MainManager.h  Renderer.h  System.h
P1/windows/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
interpreted/: Cargo.toml
interpreted/src/: lexer.rs  lib.rs  parser.rs  token.rs
interpreted/src/won/: lexer.rs  mod.rs  parser.rs  token.rs  (+1 more)
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs  p1.rs  shader.frag  shader.vert
src/ecs/: archetype.rs  component.rs  entities.rs  entity.rs  error.rs  mod.rs  query.rs
src/error/: data.rs  event.rs  mod.rs  p1.rs  system.rs  utility.rs
src/event/: builtin.rs  event.rs  input.rs  mod.rs  tick.rs
src/events/: event_manager.rs  mod.rs
src/rendering/: mod.rs  program.rs  shader.rs  utility.rs  window_manager.rs
src/ui/: anchor.rs  mod.rs
src/utility/: mod.rs
