workspace = { members = [ "macros" ] }
[package]
name = "p1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }
gl = "0.14.0"
gl_loader = "0.1.2"
glfw = "0.55.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
once_cell = "1.19"
parking_lot = "0.12.3"
dashmap = "6.1.0"

[dependencies.bitvec]
version = "1.0.1"
features = ["serde"]
