workspace = { members = [ "interpreted", "macros" ] }
[package]
name = "p1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }
interpreted = { path = "interpreted" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
parking_lot = "0.12.3"
dashmap = "6.1.0"
rustc-hash = "2.1.1"
thiserror = "2.0.12"
chrono = "0.4.40"
wgpu = "24.0.3"
winit = "0.30.9"
eval = "0.4.3"

[dependencies.bitvec]
version = "1.0.1"
features = ["serde"]
